; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-sharedata.c_ldeleteconf.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-sharedata.c_ldeleteconf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.table = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ldeleteconf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ldeleteconf(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.table*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.table* @get_table(i32* %4, i32 1)
  store %struct.table* %5, %struct.table** %3, align 8
  %6 = load %struct.table*, %struct.table** %3, align 8
  %7 = getelementptr inbounds %struct.table, %struct.table* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @lua_close(i32 %8)
  %10 = load %struct.table*, %struct.table** %3, align 8
  %11 = call i32 @delete_tbl(%struct.table* %10)
  ret i32 0
}

declare dso_local %struct.table* @get_table(i32*, i32) #1

declare dso_local i32 @lua_close(i32) #1

declare dso_local i32 @delete_tbl(%struct.table*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
